# TrafficAgent

./: CMakeLists.txt  DriverPage.qml  FineTariff.qml  Home.qml  Horoscope.qml  LoginPage.qml  Main.qml  Maps.qml  MotiveSelector.qml  NewTicket.qml  News.qml  SearchBar.qml  SideMenu.qml  TrafficTicketData.qml  TrafficTicketDetails.qml  TrafficTicketPage.qml  Vehicle.qml  WeatherDelegate.ui.qml  WeatherForm.ui.qml  database.js  main.cpp  service.js
android/: AndroidManifest.xml
